<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Strava Heatmap</string>
    <string name="action_settings">Settings</string>
    <string name="action_color">Color</string>
    <string name="action_type">Type</string>
    <string name="action_color_blue">Blue</string>
    <string name="action_color_red">Red</string>
    <string name="action_type_cycling">Cycling</string>
    <string name="action_type_running">Running</string>
    <string name="action_type_both">Both</string>
    <string name="action_color_yellow">Yellow</string>
    <string name="action_map">Map</string>
    <string name="action_map_normal">Normal</string>
    <string name="action_map_satellite">Satellite</string>
    <string name="action_map_terrain">Terrain</string>
    <string name="title_heatmap">Heatmap</string>

</resources>
